backstage-aap/rocketchat/2-deployment-rocket.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 1
  selector:
    app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: rocket.chat:2.4.9
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
      restartPolicy: Always
