backstage-aap/rocketchat/3-service-mongo.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat-db
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: rocketchat-db
