backstage-aap/rocketchat/6-service-rocket.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: rocketchat
