backstage-aap/rocketchat/4-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rocket-chat
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: rocket-chat
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
